// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PanelHeader snapshots > should render the dropdown menu variant 1`] = `
<DocumentFragment>
  <div
    class="_ComponentHeader_163cd5"
    data-test-component-header="rectangle"
  >
    <div
      class="_ComponentHeader__label_163cd5"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Element type"
        class="_ButtonMenu_7516ba _PanelHeader__trigger_8adac9"
        data-state="closed"
        type="button"
      >
        <span
          class="_PanelHeader__label_8adac9"
        >
          Rectangle
          <svg
            class="Icon"
            data-fpl-icon-size="24"
            fill="none"
            height="24"
            style="color: var(--color-neutral-1);"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M9.646 11.146a.5.5 0 0 1 .708 0L12 12.793l1.646-1.647a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 0-.708"
              data-svg-property="fill"
              fill="white"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="_ComponentHeader__buttons_163cd5"
    >
      <button
        type="button"
      >
        buttons
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PanelHeader snapshots > should render the plain label variant 1`] = `
<DocumentFragment>
  <div
    class="_ComponentHeader_163cd5"
    data-test-component-header="rectangle"
  >
    <div
      class="_ComponentHeader__label_163cd5"
    >
      <span
        class="_PanelHeader__label_8adac9"
      >
        Rectangle
      </span>
    </div>
    <div
      class="_ComponentHeader__buttons_163cd5"
    >
      <button
        type="button"
      >
        buttons
      </button>
    </div>
  </div>
</DocumentFragment>
`;
